fix: add dark mode to swagger-ui

--- a/src/pages/SwaggerPage/swagger-page.scss
+++ b/src/pages/SwaggerPage/swagger-page.scss
@@ -5,10 +5,16 @@
   flex-direction: column;
   width: 100%;
 
+  &__loader {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+  }
+
   &__toolbar {
     padding: 12px 16px;
-    background: #f7f7f7;
-    border-bottom: 1px solid #e5e5e5;
+    border-bottom: 1px solid var(--ant-color-border);
   }
 
   &__content {
@@ -20,6 +26,5 @@
   &__content .swagger-ui {
     flex: 1;
     overflow-y: auto;
-    background: #fff;
   }
 }
